# Traits-Extraction-of-Pigs-Based-on-Segmentation-Pointcloud

./: Body_length_measurement.cpp  CLAUDE.md  CMakeLists.txt  Chest_depth.cpp  Chest_width.cpp  Hip_grith.cpp  Hip_height.cpp  Hip_width.cpp  MAPE.cpp  README_ZH.md  Withers_heigh.cpp  abdominal_height.cpp  abdominal_width.cpp  adbominal_grith.cpp  alpha_shapes_bonder.cpp  application_design.md  batch_ply2txt.cpp  chest_grith_2.cpp  data_process.cpp  filtered_upsampled_cloud.txt  hole_filling.cpp  hole_filling.h  hull.pcd  image2pointclouds.cpp  jet.cpp  octree.cpp  pcl_1.13.props  pclknn.cpp  pointcloud_pipeline.cpp  some_vis.cpp  split_point_cloud.cpp  test.cpp  upsample.cpp  upsampled_cloud.txt  顺时针排列.pcd
Src/: CMakeLists.txt  MultiGridOctreeData.inl  PoissonRecon.cpp  README.md  main.cpp
Src/application/: CMakeLists.txt  PigMeasurementApp.cpp  PigMeasurementApp.h  README.md
Src/lidar_interface/: CMakeLists.txt  LivoxLidarInterface.cpp  LivoxLidarInterface.h  README.md
Src/measurement/: BodyMeasurementCalculator.cpp  BodyMeasurementCalculator.h  CMakeLists.txt  README.md
Src/optimization/: CMakeLists.txt  PerformanceOptimizer.cpp  PerformanceOptimizer.h  README.md
Src/pointcloud_processing/: CMakeLists.txt  PointCloudProcessor.cpp  PointCloudProcessor.h  README.md
Src/segmentation/: CMakeLists.txt  ONNXSegmenter.cpp  ONNXSegmenter.h  README.md
Src/tests/: CMakeLists.txt  test_main.cpp
Src/visualization/: CMakeLists.txt  README.md  VisualizationManager.cpp  VisualizationManager.h
docs/: DEVELOPER_GUIDE.md  USER_GUIDE.md
jet/: normal_estimation.cpp
pcl/: README.md
subsample/: README.md
体尺测量/: README.md
